main under header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,13 @@
 <ion-app>
-  <ion-split-pane when="sm" content-id="main-content">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-icon slot="start" name="chatbox"></ion-icon>
+      <ion-title>IN18</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-split-pane when="sm" content-id="main-content" class="main-content">
     <ion-menu content-id="main-content">
-      <ion-header>
-        <ion-toolbar color="primary">
-          <ion-icon slot="start" name="chatbox"></ion-icon>
-          <ion-title>IN18</ion-title>
-        </ion-toolbar>
-      </ion-header>
+      
 
       <ion-content>
         <ion-list>
