move header to top bar component

--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -1,3 +1,6 @@
-<p>
-  top-menu works!
-</p>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-icon slot="start" name="chatbox"></ion-icon>
+    <ion-title>IN18</ion-title>
+  </ion-toolbar>
+</ion-header>
