--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
 <ion-app>
-  <ion-header>
-    <ion-toolbar color="primary">
-      <ion-icon slot="start" name="chatbox"></ion-icon>
-      <ion-title>IN18</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <top-menu></top-menu>
   <ion-split-pane when="sm" content-id="main-content" class="main-content">
     <ion-menu content-id="main-content">
       
