correction bug app-top-bar + ajout traduction.ts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <top-menu></top-menu>
+  <app-top-menu></app-top-menu>
   <ion-split-pane when="sm" content-id="main-content" class="main-content">
     <ion-menu content-id="main-content">
       
