--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,11 @@
         </ion-toolbar>
       </ion-header>
       <ion-content class="ion-padding">
-        <h1>Main Content</h1>
+        <ion-list>
+          <app-trads-group></app-trads-group>
+          <app-trads-group></app-trads-group>
+          <app-trads-group></app-trads-group>
+        </ion-list>
       </ion-content>
     </div>
 
