--- a/src/app/components/trads-group/trads-group.component.html
+++ b/src/app/components/trads-group/trads-group.component.html
@@ -1,3 +1,9 @@
-<p>
-  trads-group works!
-</p>
+<ion-item-group>
+  <ion-item-divider>
+    <ion-label>Chemin.des.trads</ion-label>
+  </ion-item-divider>
+  
+  <app-trad-field></app-trad-field>
+  <app-trad-field></app-trad-field>
+  <app-trad-field></app-trad-field>
+</ion-item-group>
