--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -1,7 +1,12 @@
 <ion-header>
   <ion-toolbar color="tertiary">
-    
+
   <ion-buttons slot="start">
+    <ion-menu-toggle>
+      <ion-button>
+        <ion-icon slot="icon-only" name="menu"></ion-icon>
+      </ion-button>
+    </ion-menu-toggle>
     <ion-icon name="chatbox" size="large"></ion-icon>
     <ion-title>IN18</ion-title>
   </ion-buttons>
