--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,36 @@
           <ion-list-header>
             <ion-button (click)="onClick()">
               <ion-icon slot="start" name="add"></ion-icon>
-              Click me
+              Ajouter une traduction
             </ion-button>
           </ion-list-header>
           <ion-menu-toggle auto-hide="false">
             <ion-item button>
-              <ion-icon slot="start" name='home'></ion-icon>
+              <ion-icon slot="start" name="chevron-forward"></ion-icon>
+              <ion-icon slot="start" name='folder'></ion-icon>
               <ion-label>
                 Home
+              </ion-label>
+            </ion-item>
+            <ion-item button>
+              <ion-icon slot="start" name="chevron-forward"></ion-icon>
+              <ion-icon slot="start" name='folder'></ion-icon>
+              <ion-label>
+                Forum
+              </ion-label>
+            </ion-item>
+            <ion-item button>
+              <ion-icon slot="start" name="chevron-forward"></ion-icon>
+              <ion-icon slot="start" name='folder'></ion-icon>
+              <ion-label>
+                Game
+              </ion-label>
+            </ion-item>
+            <ion-item button>
+              <ion-icon slot="start" name="chevron-forward"></ion-icon>
+              <ion-icon slot="start" name='folder'></ion-icon>
+              <ion-label>
+                Global
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
@@ -25,18 +47,6 @@
     </ion-menu>
 
     <div class="ion-page" id="main-content">
-      <ion-header>
-        <ion-toolbar>
-          <ion-buttons slot="start">
-            <ion-menu-toggle>
-              <ion-button>
-                <ion-icon slot="icon-only" name="menu"></ion-icon>
-              </ion-button>
-            </ion-menu-toggle>
-          </ion-buttons>
-          <ion-title>Header</ion-title>
-        </ion-toolbar>
-      </ion-header>
       <ion-content class="ion-padding">
         <ion-list>
           <app-trads-group></app-trads-group>
