--- a/src/app/components/trad-field/trad-field.component.html
+++ b/src/app/components/trad-field/trad-field.component.html
@@ -1,5 +1,5 @@
 <ion-item>
-  <ion-label position="floating">Français</ion-label>
+  <ion-label position="floating">{{language}}</ion-label>
   <ion-textarea></ion-textarea>
   <ion-button slot="end" (click)="confirm()" expand="block" shape="round" [color]="btnColor"  [fill]="btnFill">
     {{btnText}}
