--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -19,7 +19,16 @@
 
     <ion-buttons slot="start">
     <ion-button (click)="presentPopover($event,0)">
-      <ion-icon name="file-tray-full" size="large"></ion-icon>Project
+      <ion-icon name="file-tray-full" size="large"></ion-icon> <ion-label>Project</ion-label>
+    </ion-button>
+    <ion-button>
+      <ion-icon name="language" size="large"></ion-icon> Translate
+    </ion-button>
+    <ion-button>
+      <ion-icon name="globe" size="large"></ion-icon> Languages
+    </ion-button>
+    <ion-button>
+      <ion-icon name="settings" size="large"></ion-icon> Settings
     </ion-button>
 
   </ion-buttons>
