--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,47 +2,12 @@
   <app-top-menu></app-top-menu>
   <ion-split-pane when="sm" content-id="main-content" class="main-content">
     <ion-menu content-id="main-content">
-      
-
       <ion-content>
-        <ion-list>
-          <ion-list-header>
-            <ion-button (click)="onClick()">
-              <ion-icon slot="start" name="add"></ion-icon>
-              Ajouter une traduction
-            </ion-button>
-          </ion-list-header>
-          <ion-menu-toggle auto-hide="false">
-            <ion-item button>
-              <ion-icon slot="start" name="chevron-forward"></ion-icon>
-              <ion-icon slot="start" name='folder'></ion-icon>
-              <ion-label>
-                Home
-              </ion-label>
-            </ion-item>
-            <ion-item button>
-              <ion-icon slot="start" name="chevron-forward"></ion-icon>
-              <ion-icon slot="start" name='folder'></ion-icon>
-              <ion-label>
-                Forum
-              </ion-label>
-            </ion-item>
-            <ion-item button>
-              <ion-icon slot="start" name="chevron-forward"></ion-icon>
-              <ion-icon slot="start" name='folder'></ion-icon>
-              <ion-label>
-                Game
-              </ion-label>
-            </ion-item>
-            <ion-item button>
-              <ion-icon slot="start" name="chevron-forward"></ion-icon>
-              <ion-icon slot="start" name='folder'></ion-icon>
-              <ion-label>
-                Global
-              </ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
+        <ion-button (click)="addTraduction()">
+          <ion-icon slot="start" name="add"></ion-icon>
+          Ajouter une traduction
+        </ion-button>
+        <app-tree-view></app-tree-view>
       </ion-content>
     </ion-menu>
 
@@ -55,6 +20,5 @@
         </ion-list>
       </ion-content>
     </div>
-
   </ion-split-pane>
 </ion-app>
