--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
           <ion-icon slot="start" name="add"></ion-icon>
           Ajouter une traduction
         </ion-button>
-        <app-tree-view></app-tree-view>
+        <app-tree-view [tree]="tree"></app-tree-view>
       </ion-content>
     </ion-menu>
 
