--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -30,7 +30,9 @@
     <ion-button>
       <ion-icon name="settings" size="large"></ion-icon> Settings
     </ion-button>
-
+    <ion-button (click)="download()">
+      <ion-icon name="download" size="large"></ion-icon> Download
+    </ion-button>
   </ion-buttons>
   </ion-toolbar>
 </ion-header>
