--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,7 @@
   <ion-split-pane when="sm" content-id="main-content" class="main-content">
     <ion-menu content-id="main-content">
       <ion-content>
-        <ion-button (click)="addTraduction()" expand="block" fill="clear" shape="round">
-          <ion-icon slot="start" name="add"></ion-icon>
-          Ajouter une traduction
-        </ion-button>
-        <app-tree-view [setTree]="tree" (selected)="selected($event)"></app-tree-view>
+        <app-tree-view [setTree]="tree" (selected)="selected($event)" (newTrad)="addTraduction($event)"></app-tree-view>
       </ion-content>
     </ion-menu>
 
