--- a/src/app/components/tree-view/tree-view.component.html
+++ b/src/app/components/tree-view/tree-view.component.html
@@ -1,4 +1,11 @@
+
 <ion-list>
+  <ion-list-header>
+    <ion-button (click)="addTraduction()" expand="block" fill="clear" shape="round">
+      <ion-icon slot="start" name="add"></ion-icon>
+      Ajouter une traduction
+    </ion-button>
+  </ion-list-header>
   <div *ngFor="let path of paths">
     <ion-row  *ngIf="isVisible(path)">
       <ion-col size="1" *ngFor="let level of getLevels(path)"></ion-col>
