--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -17,17 +17,17 @@
     </ion-buttons>
 
     <ion-buttons slot="start">
-    <ion-button (click)="presentPopover($event,0)">
+    <!-- <ion-button (click)="presentPopover($event,0)">
       <ion-icon size="large" slot="start" name="file-tray-full"></ion-icon> <ion-label>Project</ion-label>
-    </ion-button>
-    <ion-button (click)="presentTradConfirm()">
-      <ion-icon size="large" slot="start" name="language"></ion-icon> Translate
     </ion-button>
     <ion-button (click)="presentModal(0)">
       <ion-icon size="large" slot="start" name="globe"></ion-icon> Languages
     </ion-button>
     <ion-button>
       <ion-icon size="large" slot="start" name="settings"></ion-icon> Settings
+    </ion-button> -->
+    <ion-button (click)="translate()">
+      <ion-icon size="large" slot="start" name="language"></ion-icon> Translate
     </ion-button>
     <ion-button (click)="download()">
       <ion-icon size="large" slot="start" name="download"></ion-icon> Download
