--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -10,11 +10,11 @@
     <ion-icon src="assets/icon/favicon.svg" size="large" class="ion-margin"></ion-icon>
   </ion-buttons>
     
-    <ion-buttons slot="end">
+    <!-- <ion-buttons slot="end">
       <ion-button>
         <ion-icon slot="icon-only" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
       </ion-button>
-    </ion-buttons>
+    </ion-buttons> -->
 
     <ion-buttons slot="start">
     <!-- <ion-button (click)="presentPopover($event,0)">
