--- a/src/app/components/tree-view/tree-view.component.html
+++ b/src/app/components/tree-view/tree-view.component.html
@@ -1,10 +1,10 @@
 
 <ion-list>
   <ion-list-header>
-    <ion-button (click)="addTraduction()" expand="block" fill="clear" shape="round">
+    <!-- <ion-button (click)="addTraduction()" expand="block" fill="clear" shape="round">
       <ion-icon slot="start" name="add"></ion-icon>
       Ajouter une traduction
-    </ion-button>
+    </ion-button> -->
   </ion-list-header>
   <div *ngFor="let path of paths">
     <ion-row  *ngIf="isVisible(path)">
