--- a/src/app/components/tree-view/new-trad-modal/new-trad-modal.component.html
+++ b/src/app/components/tree-view/new-trad-modal/new-trad-modal.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<!-- <ion-content>
   <ion-item>
     <ion-label position="floating">Path</ion-label>
     <ion-input [(ngModel)]="traduction.path" (ionChange)="onPathChange($event.detail.value)"></ion-input>
@@ -8,7 +8,7 @@
     <ion-input [(ngModel)]="traduction.value" (ionChange)="onValueChange($event.detail.value)"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-select [(ngModel)]="traduction.language" (ionChange)="onLanguageChange($event.detail.value)" value="en" placeholder="Language">
+    <ion-select [(ngModel)]="traduction.language" (ionChange)="onLanguageChange($event)" value="en" placeholder="Language">
       <ion-select-option value="en">English</ion-select-option>
       <ion-select-option value="fr">French</ion-select-option>
       <ion-select-option value="de">German</ion-select-option>
@@ -27,10 +27,10 @@
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="primary">
-      <ion-button (click)="import()" slot="primary" color="success" [disabled]="traduction.path=='' || traduction.value==''">
+      <ion-button (click)="import()" slot="primary" color="success" [disabled]="traduction.path === '' || traduction.value === ''">
         <ion-icon slot="start" name="checkmark"></ion-icon>
         Import
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
