tree with Folder structure

--- a/src/app/components/tree-view/new-trad-modal/new-trad-modal.component.html
+++ b/src/app/components/tree-view/new-trad-modal/new-trad-modal.component.html
@@ -1,4 +1,4 @@
-<!-- <ion-content>
+<ion-content>
   <ion-item>
     <ion-label position="floating">Path</ion-label>
     <ion-input [(ngModel)]="traduction.path" (ionChange)="onPathChange($event.detail.value)"></ion-input>
@@ -33,4 +33,4 @@
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-</ion-footer> -->
+</ion-footer>
