--- a/src/app/components/tree-view/tree-view.component.html
+++ b/src/app/components/tree-view/tree-view.component.html
@@ -1,12 +1,13 @@
 
 <ion-list>
   <ion-list-header>
-    <!-- <ion-button (click)="addTraduction()" expand="block" fill="clear" shape="round">
+    <ion-button (click)="addTraduction()" expand="block" fill="clear" shape="round">
       <ion-icon slot="start" name="add"></ion-icon>
       Ajouter une traduction
-    </ion-button> -->
+    </ion-button> 
   </ion-list-header>
-  <div *ngFor="let path of paths">
+  <app-folder-tree [folder]="structure" [level]="-1"></app-folder-tree>
+  <!--<div *ngFor="let path of paths">
     <ion-row  *ngIf="isVisible(path)">
       <ion-col size="1" *ngFor="let level of getLevels(path)"></ion-col>
       <ion-col>
@@ -21,5 +22,5 @@
         </ion-item>
       </ion-col>
     </ion-row>
-  </div>
+  </div>-->
 </ion-list>
