--- a/src/app/components/tree-view/tree-view.component.html
+++ b/src/app/components/tree-view/tree-view.component.html
@@ -1,26 +1,9 @@
-
 <ion-list>
   <ion-list-header>
     <ion-button (click)="addTraduction()" expand="block" fill="clear" shape="round">
       <ion-icon slot="start" name="add"></ion-icon>
-      Ajouter une traduction
-    </ion-button> 
+      Create a new translation ID
+    </ion-button>
   </ion-list-header>
   <app-folder-tree [folder]="structure" [level]="-1"></app-folder-tree>
-  <!--<div *ngFor="let path of paths">
-    <ion-row  *ngIf="isVisible(path)">
-      <ion-col size="1" *ngFor="let level of getLevels(path)"></ion-col>
-      <ion-col>
-        <ion-item button *ngIf="isVisible(path)" (click)="develop(path)">
-          <ion-icon slot="start" [color]="getColor(path)" [name]="getIcon(path, 'chevron')" *ngIf="isFolder(path)"></ion-icon>
-          <ion-icon slot="start" [color]="getColor(path)" [name]="getIcon(path, 'folder')"></ion-icon>
-          <ion-label [color]="getColor(path)">
-            <p>
-              {{getName(path)}}
-            </p>
-          </ion-label>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-  </div>-->
 </ion-list>
