--- a/src/app/components/tree-view/folder-tree/folder-tree.component.html
+++ b/src/app/components/tree-view/folder-tree/folder-tree.component.html
@@ -1,9 +1,9 @@
 <ion-row *ngIf="level>=0">
-  <ion-col [size]="level"></ion-col>
+  <ion-col [size]="level" ></ion-col>
   <ion-col>
     <ion-item button (click)="toggleCollapse()">
       <ion-icon slot="start" [name]="chevronIcon()" [color]="getColor(true)"></ion-icon>
-      <ion-icon slot="start" name="folder" [color]="getColor(true)"></ion-icon>
+      <ion-icon slot="start" [name]="folderIcon()" [color]="getColor(true)"></ion-icon>
       <ion-label [color]="getColor(true)">
         <p>
           {{folder.getName()}}
@@ -12,7 +12,7 @@
     </ion-item>
   </ion-col>
 </ion-row>
-<div *ngIf="(!collapsed || level < 0)">
+<div *ngIf="isExpanded()">
   <ion-row *ngFor="let file of folder.tradGroupList">
     <ion-col [size]="level+1"></ion-col>
     <ion-col>
@@ -27,8 +27,8 @@
     </ion-col>
   </ion-row>
 </div>
-<div *ngIf="(!collapsed || level < 0)">
-  <ion-row *ngFor="let f of folder.folderList">
+<div *ngIf="isExpanded()">
+  <div *ngFor="let f of folder.folderList">
     <app-folder-tree [folder]="f" [level]="level+1"></app-folder-tree>
-  </ion-row>
+  </div>
 </div>
