--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,9 @@
             <app-trads-group [tradGroup]="global.getSelectedStructureAsTradGroup()"></app-trads-group>
           </div>
           <div *ngIf="global.isSelectedStructureFolder()">
+            <app-trad-folder [folder]="global.getSelectedFolder()" *ngIf="global.getSelectedFolder()!=global.structure"></app-trad-folder>
             <app-trads-group *ngFor="let t of global.getSelectedFolder().tradGroupList" [tradGroup]="t"></app-trads-group>
-            <app-trad-folder *ngFor="let f of global.getSelectedFolder().folderList" [folder]="f"></app-trad-folder>
+            <app-trad-folder *ngFor="let f of global.getSelectedFolder().folderList" [folder]="f" [canExpand]="true"></app-trad-folder>
           </div>
         </ion-list>
       </ion-content>
