--- a/src/app/components/tree-view/new-trad-modal/new-trad-modal.component.html
+++ b/src/app/components/tree-view/new-trad-modal/new-trad-modal.component.html
@@ -7,10 +7,10 @@
     <ion-label position="floating">Name</ion-label>
     <ion-input [value]="fileName" (ionChange)="onNameChange($event.detail.value)"></ion-input>
   </ion-item>
-  <ion-item>
+  <!--<ion-item>
     <ion-label position="floating">This is a folder</ion-label>
     <ion-checkbox [value]="isFolder" (ionChange)="onIsFolderChange($event.detail.value)"></ion-checkbox>
-  </ion-item>
+  </ion-item>-->
 </ion-content>
 
 <ion-footer>
