--- a/src/app/components/tree-view/tree-view.component.html
+++ b/src/app/components/tree-view/tree-view.component.html
@@ -1,9 +1,9 @@
 <ion-list>
-  <ion-list-header>
+  <!--<ion-list-header>
     <ion-button (click)="addTraduction()" expand="block" fill="clear" shape="round">
       <ion-icon slot="start" name="add"></ion-icon>
       Create an item or a folder
     </ion-button>
-  </ion-list-header>
+  </ion-list-header>-->
   <app-folder-tree [folder]="structure" [level]="-1"></app-folder-tree>
 </ion-list>
