--- a/src/app/components/tree-view/tree-view.component.html
+++ b/src/app/components/tree-view/tree-view.component.html
@@ -5,5 +5,5 @@
       Create an item or a folder
     </ion-button>
   </ion-list-header>-->
-  <app-folder-tree [folder]="structure" [level]="-1"></app-folder-tree>
+  <app-folder-tree [folder]="global.structure" [level]="-1"></app-folder-tree>
 </ion-list>
