--- a/src/app/components/trad-field/trad-field.component.html
+++ b/src/app/components/trad-field/trad-field.component.html
@@ -1,6 +1,6 @@
 <ion-item>
-  <ion-label position="floating" color="secondary">{{trad.language}}</ion-label>
-  <ion-textarea [value]="trad.value" (ionChange)= "onUpdate($event.target.value)"></ion-textarea>
+  <ion-label position="floating" [color]="trad.checked?'success':'secondary'">{{trad.language}}</ion-label>
+  <ion-textarea [value]="trad.value" (ionChange)= "onUpdate($event.target.value)" [disabled]="trad.checked"></ion-textarea>
   <ion-button slot="end" (click)="confirm()" expand="block" shape="round" [color]="btnColor"  [fill]="btnFill">
     {{btnText}}
   </ion-button>
