--- a/src/app/components/top-menu/top-menu.component.html
+++ b/src/app/components/top-menu/top-menu.component.html
@@ -20,7 +20,7 @@
     <ion-button (click)="presentPopover($event,0)">
       <ion-icon size="large" slot="start" name="file-tray-full"></ion-icon> <ion-label>Project</ion-label>
     </ion-button>
-    <ion-button (click)="presentModal(0)">
+    <ion-button (click)="presentLanguagesModal(0)">
       <ion-icon size="large" slot="start" name="globe"></ion-icon> Languages
     </ion-button>
     <ion-button>
