--- a/src/app/components/trad-folder/trad-folder.component.html
+++ b/src/app/components/trad-folder/trad-folder.component.html
@@ -1,20 +1,27 @@
-<ion-card>
+<ion-card [class]="canExpand?'':'opened-folder'">
   <ion-card-header>
     <ion-card-subtitle>
-      <ion-item>
+      <ion-item [class]="canExpand?'':'opened-folder'">
 
         
         <ion-icon slot="start" [name]="canExpand?'folder':'folder-open'" [color]="folder.isValidated()?'success':''"></ion-icon>
         <ion-icon slot="start" name="checkmark-circle" color="success" *ngIf="folder.isValidated()"></ion-icon>
         <ion-textarea slot="start" [value]="folder.getName()" (ionChange)="onNameUpdate($event.target.value)"
           [color]="folder.isValidated()?'success':''"></ion-textarea>
-        <ion-button slot="end" expand="block" shape="round" (click)="select()" *ngIf="canExpand">
-          Expand
+        <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="addTraduction()" *ngIf="canExpand">
+          <ion-icon name="add"></ion-icon><ion-icon name="document"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="addTraduction(true)" *ngIf="canExpand">
+          <ion-icon name="add"></ion-icon><ion-icon name="folder"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" slot="end" expand="block" shape="round" (click)="select()" *ngIf="canExpand">
+          <ion-icon name="chevron-down-outline"></ion-icon> Expand
         </ion-button>
         <ion-button slot="end" expand="block" shape="round" (click)="presentDeleteConfirm()" *ngIf="!canExpand"
           color="danger">
-          Delete
+          <ion-icon name="trash"></ion-icon>
         </ion-button>
+        
       </ion-item>
     </ion-card-subtitle>
   </ion-card-header>
