--- a/src/app/components/top-menu/languages-modal/languages-modal.component.html
+++ b/src/app/components/top-menu/languages-modal/languages-modal.component.html
@@ -7,9 +7,21 @@
     </ion-toolbar>
   </ion-header>
   <ion-content fullscreen>
-    <ion-title>
-        test
-    </ion-title>
+    <ion-content>
+      <ion-item *ngFor="let language of global.languages">
+        {{language}}
+        <ion-button slot="end" (click)="delete()" shape="round" color="danger"><ion-icon name="trash"></ion-icon></ion-button>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">New Language</ion-label>
+        <ion-input [value]="newLanguage" (ionChange)="onNewLanguageChange($event.detail.value)"></ion-input>
+        <ion-button slot="end" (click)="add()" shape="round" color="primary"><ion-icon name="add"></ion-icon></ion-button>
+      </ion-item>
+      <!--<ion-item>
+        <ion-label position="floating">This is a folder</ion-label>
+        <ion-checkbox [value]="isFolder" (ionChange)="onIsFolderChange($event.detail.value)"></ion-checkbox>
+      </ion-item>-->
+    </ion-content>
     
   </ion-content>
   <ion-footer class="ion-no-border">
