--- a/src/app/components/top-menu/languages-modal/languages-modal.component.html
+++ b/src/app/components/top-menu/languages-modal/languages-modal.component.html
@@ -1,6 +1,6 @@
 <ion-header translucent>
     <ion-toolbar>
-      <ion-title>Modal Content</ion-title>
+      <ion-title>Languages</ion-title>
       <ion-buttons slot="end">
         <ion-button (click)="dismissModal()">Close</ion-button>
       </ion-buttons>
@@ -10,13 +10,9 @@
     <ion-content>
       <ion-item *ngFor="let language of global.languages">
         {{language}}
-        <ion-button slot="end" (click)="delete()" shape="round" color="danger"><ion-icon name="trash"></ion-icon></ion-button>
+        <ion-button slot="end" (click)="presentDeleteConfirm(language)" shape="round" color="danger"><ion-icon name="trash"></ion-icon></ion-button>
       </ion-item>
-      <ion-item>
-        <ion-label position="floating">New Language</ion-label>
-        <ion-input [value]="newLanguage" (ionChange)="onNewLanguageChange($event.detail.value)"></ion-input>
-        <ion-button slot="end" (click)="add()" shape="round" color="primary"><ion-icon name="add"></ion-icon></ion-button>
-      </ion-item>
+      
       <!--<ion-item>
         <ion-label position="floating">This is a folder</ion-label>
         <ion-checkbox [value]="isFolder" (ionChange)="onIsFolderChange($event.detail.value)"></ion-checkbox>
@@ -25,7 +21,12 @@
     
   </ion-content>
   <ion-footer class="ion-no-border">
-    <ion-toolbar>
+    <ion-item>
+      <ion-label position="floating">New Language</ion-label>
+      <ion-input [value]="newLanguage" (ionChange)="onNewLanguageChange($event.detail.value)"></ion-input>
+      <ion-button slot="end" (click)="add()" shape="round" color="primary"><ion-icon name="add"></ion-icon></ion-button>
+    </ion-item>
+    <!--<ion-toolbar>
         <ion-item>
             <ion-label>Primary language</ion-label>
             <ion-select value="none">
@@ -34,5 +35,5 @@
               
             </ion-select>
           </ion-item>
-    </ion-toolbar>
+    </ion-toolbar>-->
   </ion-footer>
